<resources>
    <string name="app_name">IMCApp_Hugo_Correa_Cortijo</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="edad">Edad</string>
    <string name="calcular">Calcular</string>
    <string name="recalcular">Re-calcular</string>
    <string name="tuResultado">Tu resultado</string>
    <string name="infrapeso">Peso inferior al normal</string>
    <string name="normal">Normal</string>
    <string name="sobrepeso">Peso superior al normal</string>
    <string name="obesidad">Obesidad</string>
    <string name="textoinfrapeso">Estas por debajo de lo optimo para tu peso y altura</string>
    <string name="textonormal">Estas de lokos</string>
    <string name="textosobrepeso">Estas por encima de lo optimo para tu peso y altura</string>
    <string name="textoobesidad">Estas demasiado por encima de lo optimo para tu peso y altura, deberias cuidarte mas</string>
</resources>